# computer-vision

./: .gitignore  pyproject.toml  shell.nix
.direnv/: flake-profile-1-link
lab1/: lab1.ipynb
lab2/: Mishin_Timofey_submission.csv  lab2.ipynb  misc.py
